added second model and gpu

--- a/HW1_problem1_1_simulatefn.ipynb
+++ b/HW1_problem1_1_simulatefn.ipynb
@@ -34,7 +34,7 @@
         {
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7f5a34279290>"
+              "<torch._C.Generator at 0x111d90e10>"
             ]
           },
           "execution_count": 1,
@@ -54,6 +54,27 @@
         "\n",
         "# set random seed\n",
         "torch.manual_seed(42)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Device cpu\n"
+          ]
+        }
+      ],
+      "source": [
+        "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+        "print(\"Device\", device)\n",
+        "if torch.cuda.is_available(): \n",
+        "    torch.cuda.manual_seed(42)\n",
+        "    torch.cuda.manual_seed_all(42)"
       ]
     },
     {
@@ -142,12 +163,14 @@
         "  optimizer = optim.Adam(model.parameters(), lr = learning_rate)\n",
         "  loss_fn = nn.MSELoss()\n",
         "\n",
+        "  model.to(device)\n",
+        "\n",
         "  # Training loop for model 1\n",
         "  loss_vec = []\n",
         "  for epoch in range(epochs):\n",
         "      epoch_loss = 0.0\n",
         "      for i,data in enumerate(data_loader):\n",
-        "          x_batch, y_batch = data\n",
+        "          x_batch, y_batch = data.to(device)\n",
         "          optimizer.zero_grad()\n",
         "      #print(x_train.shape)\n",
         "          y_pred = model(x_batch)\n",
@@ -194,20 +217,23 @@
       ],
       "source": [
         "# test model function and class\n",
-        "model_test = model_class(input_size = 1, output_size = 1, hidden_sizes = [64,32])\n",
-        "model_test_loss = train_model(model_test, x_train, y_train, batch = 4, epochs = 100, learning_rate = 0.001)\n",
+        "model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [64,32])\n",
+        "model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [5, 10, 25, 5])\n",
+        "model1_loss = train_model(model1, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)\n",
+        "model2_loss = train_model(model1, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)\n",
         "# Evaluate the model\n",
         "x_test = torch.linspace(-2 * torch.pi, 2 * torch.pi, 100).unsqueeze(1)\n",
         "y_test = fn1(x_test)\n",
-        "y_pred1 = model_test(x_test)\n",
+        "y_pred1 = model1(x_test)\n",
+        "y_pred2 = model2(x_test)\n",
         "### Visualize plots\n",
         "plt.plot(x_test.detach(), y_test.detach(), label=\"True function\", color = 'black')\n",
         "plt.plot(x_test.detach(), y_pred1.detach(), label=\"Model 1\", color = 'orange', linestyle = 'dashed')\n",
-        "#plt.plot(x_test.detach(), y_pred2.detach(), label=\"Model2\", color = 'blue', linestyle = 'dashed')\n",
+        "plt.plot(x_test.detach(), y_pred2.detach(), label=\"Model 2\", color = 'blue', linestyle = 'dashed')\n",
         "plt.legend()\n",
         "plt.show()\n",
-        "plt.plot(np.arange(0,len(model_test_loss),1),np.array(model_test_loss), label=\"Model 1 loss\", color = 'orange')\n",
-        "#plt.plot(np.arange(0,len(loss_vec1),1),np.array(loss_vec2), label=\"Model 2 loss\", color = 'blue')\n",
+        "plt.plot(np.arange(0,len(model1_loss),1),np.array(model1_loss), label=\"Model 1 loss\", color = 'orange')\n",
+        "plt.plot(np.arange(0,len(model1_loss),1),np.array(model2_loss), label=\"Model 2 loss\", color = 'blue')\n",
         "#plt.ylim(10**-6, 1)\n",
         "plt.legend()\n",
         "plt.show()"
@@ -234,8 +260,10 @@
       ],
       "source": [
         "# best loss is 0.0682 (batch_size = 4, epochs = 100, learning_rate = 0.001)\n",
-        "valid_loss = sum(abs(y_pred1 - y_test)**2)\n",
-        "print(valid_loss)"
+        "model1_valid = sum(abs(y_pred1 - y_test)**2)\n",
+        "print(model1_valid)\n",
+        "model2_valid = sum(abs(y_pred2 - y_test)**2)\n",
+        "print(model2_valid)"
       ]
     },
     {
@@ -258,10 +286,14 @@
         }
       ],
       "source": [
-        "### Check model size: model_test = 2241 parameters\n",
-        "model1_parameters = filter(lambda p: p.requires_grad, model_test.parameters())\n",
+        "### Check model size: model1 = 2241 parameters\n",
+        "model1_parameters = filter(lambda p: p.requires_grad, model1.parameters())\n",
         "params1 = sum([np.prod(p.size()) for p in model1_parameters])\n",
-        "print(params1)"
+        "print(params1)\n",
+        "### Check model size: model2 = 2241 parameters\n",
+        "model2_parameters = filter(lambda p: p.requires_grad, model2.parameters())\n",
+        "params2 = sum([np.prod(p.size()) for p in model2_parameters])\n",
+        "print(params2)"
       ]
     }
   ],
