--- a/HW1_problem1_1_simulatefn.ipynb
+++ b/HW1_problem1_1_simulatefn.ipynb
@@ -165,13 +165,17 @@
       "outputs": [],
       "source": [
         "def train_model(model, X_train, Y_train, batch, epochs, learning_rate):\n",
+        "  # send data to device\n",
+        "  X_train, Y_train = X_train.to(device), Y_train.to(device)\n",
+        "\n",
         "  # load training data for model 1\n",
         "  data_loader = DataLoader(TensorDataset(X_train,Y_train), batch_size=batch, shuffle = True)\n",
         "\n",
         "  # Create optimizer and loss function\n",
         "  optimizer = optim.Adam(model.parameters(), lr = learning_rate)\n",
         "  loss_fn = nn.MSELoss()\n",
-        "\n",
+        "  \n",
+        "  # Send model to device\n",
         "  model.to(device)\n",
         "\n",
         "  # Training loop for model 1\n",
@@ -179,7 +183,7 @@
         "  for epoch in range(epochs):\n",
         "      epoch_loss = 0.0\n",
         "      for i,data in enumerate(data_loader):\n",
-        "          x_batch, y_batch = data.to(device)\n",
+        "          x_batch, y_batch = data\n",
         "          optimizer.zero_grad()\n",
         "      #print(x_train.shape)\n",
         "          y_pred = model(x_batch)\n",
@@ -253,13 +257,14 @@
       "source": [
         "# Evaluate the model\n",
         "x_test = torch.linspace(-2 * torch.pi, 2 * torch.pi, 100).unsqueeze(1)\n",
+        "x_test = x_test.to(device)\n",
         "y_test = fn1(x_test)\n",
         "y_pred1 = model1(x_test)\n",
         "y_pred2 = model2(x_test)\n",
         "### Visualize plots\n",
-        "plt.plot(x_test.detach(), y_test.detach(), label=\"True function\", color = 'black')\n",
-        "plt.plot(x_test.detach(), y_pred1.detach(), label=\"Model 1\", color = 'orange', linestyle = 'dashed')\n",
-        "plt.plot(x_test.detach(), y_pred2.detach(), label=\"Model 2\", color = 'blue', linestyle = 'dashed')\n",
+        "plt.plot(x_test.cpu().detach(), y_test.cpu().detach(), label=\"True function\", color = 'black')\n",
+        "plt.plot(x_test.cpu().detach(), y_pred1.cpu().detach(), label=\"Model 1\", color = 'orange', linestyle = 'dashed')\n",
+        "plt.plot(x_test.cpu().detach(), y_pred2.cpu().detach(), label=\"Model 2\", color = 'blue', linestyle = 'dashed')\n",
         "plt.legend()\n",
         "plt.show()\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model1_loss), label=\"Model 1 loss\", color = 'orange')\n",
