grid search for models

--- a/HW1_problem1_1_simulatefn.ipynb
+++ b/HW1_problem1_1_simulatefn.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -32,23 +32,14 @@
       },
       "outputs": [
         {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[1], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataLoader, TensorDataset\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# set random seed\u001b[39;00m\n",
-            "File \u001b[0;32m~/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/pandas/__init__.py:22\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m _hard_dependencies, _dependency, _missing_dependencies\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# numpy compat\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m is_numpy_dev \u001b[38;5;28;01mas\u001b[39;00m _is_numpy_dev  \u001b[38;5;66;03m# pyright: ignore # noqa:F401\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_libs\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m hashtable \u001b[38;5;28;01mas\u001b[39;00m _hashtable, lib \u001b[38;5;28;01mas\u001b[39;00m _lib, tslib \u001b[38;5;28;01mas\u001b[39;00m _tslib\n",
-            "File \u001b[0;32m~/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/pandas/compat/__init__.py:16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplatform\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_typing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m F\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_constants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[1;32m     18\u001b[0m     IS64,\n\u001b[1;32m     19\u001b[0m     PY39,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     22\u001b[0m     PYPY,\n\u001b[1;32m     23\u001b[0m )\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompat\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcompressors\u001b[39;00m\n",
-            "File \u001b[0;32m<frozen importlib._bootstrap>:1176\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
-            "File \u001b[0;32m<frozen importlib._bootstrap>:1147\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
-            "File \u001b[0;32m<frozen importlib._bootstrap>:690\u001b[0m, in \u001b[0;36m_load_unlocked\u001b[0;34m(spec)\u001b[0m\n",
-            "File \u001b[0;32m<frozen importlib._bootstrap_external>:936\u001b[0m, in \u001b[0;36mexec_module\u001b[0;34m(self, module)\u001b[0m\n",
-            "File \u001b[0;32m<frozen importlib._bootstrap_external>:1069\u001b[0m, in \u001b[0;36mget_code\u001b[0;34m(self, fullname)\u001b[0m\n",
-            "File \u001b[0;32m<frozen importlib._bootstrap_external>:729\u001b[0m, in \u001b[0;36m_compile_bytecode\u001b[0;34m(data, name, bytecode_path, source_path)\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x1136e8e10>"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -60,6 +51,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "import itertools\n",
         "\n",
         "# set random seed\n",
         "torch.manual_seed(42)"
@@ -110,7 +102,12 @@
       "source": [
         "### Generate training data\n",
         "x_train = torch.linspace(-2 * torch.pi, 2 * torch.pi, 2000).unsqueeze(1)\n",
-        "y_train = fn1(x_train)"
+        "y_train = fn1(x_train)\n",
+        "\n",
+        "# validation data\n",
+        "x_test = torch.linspace(-2 * torch.pi, 2 * torch.pi, 100).unsqueeze(1)\n",
+        "x_test = x_test.to(device)\n",
+        "y_test = fn1(x_test)"
       ]
     },
     {
@@ -203,8 +200,8 @@
       "source": [
         "# Define hyperparameter grid\n",
         "hyperparameter_grid = {\n",
-        "    'batch_size': [32, 64, 128],\n",
-        "    'learning_rate': [0.001, 0.005, 0.01]\n",
+        "    'batch_size': [8, 16, 32, 64],\n",
+        "    'learning_rate': [0.0001, 0.001, 0.01, 0.1]\n",
         "}"
       ]
     },
@@ -214,11 +211,101 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# test model function and class\n",
+        "# Initialize best model and best validation score\n",
+        "best_model = None\n",
+        "best_mse = float('inf')\n",
+        "\n",
+        "# Iterate through hyperparameter combinations using itertools.product\n",
+        "for batch_size, learning_rate in itertools.product(*hyperparameter_grid.values()):\n",
+        "    # Create model instance\n",
+        "    model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [64,32])\n",
+        "\n",
+        "    # Train the model\n",
+        "    model1_loss = train_model(model1, x_train, y_train, batch = batch_size, epochs = 100, learning_rate = learning_rate)\n",
+        "\n",
+        "    # Evaluate the model on validation set\n",
+        "    mse = nn.functional.mse_loss(model1(x_test), y_test)  # Replace with your evaluation function\n",
+        "    print(f\"MSE: {mse}, batch_size: {batch_size}, lr: {learning_rate}\")\n",
+        "    # Update best model and score if necessary\n",
+        "    if mse < best_mse:\n",
+        "        best_model_loss = model1_loss\n",
+        "        best_model = model1\n",
+        "        best_mse = mse\n",
+        "        best_batch_size = batch_size\n",
+        "        best_learning_rate = learning_rate\n",
+        "\n",
+        "# Print best hyperparameters and score\n",
+        "print(f\"Best validation score: {best_mse:.4f}\")\n",
+        "print(f\"Best batch size: {best_batch_size}\")\n",
+        "print(f\"Best learning rate: {best_learning_rate}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model1 = best_model\n",
+        "model1_loss = best_model_loss"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "'''# test model function and class\n",
         "model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [64,32])\n",
         "model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [5, 10, 25, 5])\n",
         "model1_loss = train_model(model1, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)\n",
-        "model2_loss = train_model(model1, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)"
+        "model2_loss = train_model(model2, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)'''"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize best model and best validation score\n",
+        "best_model = None\n",
+        "best_mse = float('inf')\n",
+        "\n",
+        "# Iterate through hyperparameter combinations using itertools.product\n",
+        "for batch_size, learning_rate in itertools.product(*hyperparameter_grid.values()):\n",
+        "    # Create model instance\n",
+        "    model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [5, 10, 25, 5])\n",
+        "\n",
+        "    # Train the model\n",
+        "    model2_loss = train_model(model2, x_train, y_train, batch = batch_size, epochs = 100, learning_rate = learning_rate)\n",
+        "\n",
+        "    # Evaluate the model on validation set\n",
+        "    mse = nn.functional.mse_loss(model2(x_test), y_test)  # Replace with your evaluation function\n",
+        "    print(f\"MSE: {mse}, batch_size: {batch_size}, lr: {learning_rate}\")\n",
+        "    # Update best model and score if necessary\n",
+        "    if mse < best_mse:\n",
+        "        best_model_loss = model2_loss\n",
+        "        best_model = model2\n",
+        "        best_mse = mse\n",
+        "        best_batch_size = batch_size\n",
+        "        best_learning_rate = learning_rate\n",
+        "\n",
+        "# Print best hyperparameters and score\n",
+        "print(f\"Best validation score: {best_mse:.4f}\")\n",
+        "print(f\"Best batch size: {best_batch_size}\")\n",
+        "print(f\"Best learning rate: {best_learning_rate}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model2 = best_model\n",
+        "model2_loss = best_model_loss"
       ]
     },
     {
@@ -276,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -286,17 +373,21 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "tensor([0.0682], grad_fn=<AddBackward0>)\n"
+          "ename": "NameError",
+          "evalue": "name 'y_pred1' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# best loss is 0.0682 (batch_size = 4, epochs = 100, learning_rate = 0.001)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model1_valid \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmean(\u001b[38;5;28mabs\u001b[39m(y_pred1 \u001b[38;5;241m-\u001b[39m y_test)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      3\u001b[0m mse_test \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mfunctional\u001b[38;5;241m.\u001b[39mMSELoss(y_pred1, y_test)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(model1_valid)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'y_pred1' is not defined"
           ]
         }
       ],
       "source": [
         "# best loss is 0.0682 (batch_size = 4, epochs = 100, learning_rate = 0.001)\n",
         "model1_valid = torch.mean(abs(y_pred1 - y_test)**2)\n",
-        "mse_test = nn.MSELoss(y_pred1, y_test)\n",
+        "mse_test = nn.functional.mse_loss(y_pred1, y_test)\n",
         "print(model1_valid)\n",
         "print(mse_test)\n",
         "model2_valid = torch.mean(abs(y_pred2 - y_test)**2)\n",
