--- a/HW1_problem1_1_simulatefn.ipynb
+++ b/HW1_problem1_1_simulatefn.ipynb
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "id": "vKDbbNfVkg-a"
       },
@@ -218,7 +218,7 @@
         "# Iterate through hyperparameter combinations using itertools.product\n",
         "for batch_size, learning_rate in itertools.product(*hyperparameter_grid.values()):\n",
         "    # Create model instance\n",
-        "    model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [64,32])\n",
+        "    model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [75,25])\n",
         "\n",
         "    # Train the model\n",
         "    model1_loss = train_model(model1, x_train, y_train, batch = batch_size, epochs = 100, learning_rate = learning_rate)\n",
@@ -276,7 +276,7 @@
         "# Iterate through hyperparameter combinations using itertools.product\n",
         "for batch_size, learning_rate in itertools.product(*hyperparameter_grid.values()):\n",
         "    # Create model instance\n",
-        "    model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [5, 10, 25, 5])\n",
+        "    model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [17, 26, 25, 23, 12])\n",
         "\n",
         "    # Train the model\n",
         "    model2_loss = train_model(model2, x_train, y_train, batch = batch_size, epochs = 100, learning_rate = learning_rate)\n",
@@ -306,6 +306,51 @@
       "source": [
         "model2 = best_model\n",
         "model2_loss = best_model_loss"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize best model and best validation score\n",
+        "best_model = None\n",
+        "best_mse = float('inf')\n",
+        "\n",
+        "# Iterate through hyperparameter combinations using itertools.product\n",
+        "for batch_size, learning_rate in itertools.product(*hyperparameter_grid.values()):\n",
+        "    # Create model instance\n",
+        "    model3 = model_class(1, 1, [692])\n",
+        "\n",
+        "    # Train the model\n",
+        "    model3_loss = train_model(model3, x_train, y_train, batch = batch_size, epochs = 100, learning_rate = learning_rate)\n",
+        "\n",
+        "    # Evaluate the model on validation set\n",
+        "    mse = nn.functional.mse_loss(model3(x_test), y_test)  # Replace with your evaluation function\n",
+        "    print(f\"MSE: {mse}, batch_size: {batch_size}, lr: {learning_rate}\")\n",
+        "    # Update best model and score if necessary\n",
+        "    if mse < best_mse:\n",
+        "        best_model_loss = model3_loss\n",
+        "        best_model = model3\n",
+        "        best_mse = mse\n",
+        "        best_batch_size = batch_size\n",
+        "        best_learning_rate = learning_rate\n",
+        "\n",
+        "# Print best hyperparameters and score\n",
+        "print(f\"Best validation score: {best_mse:.4f}\")\n",
+        "print(f\"Best batch size: {best_batch_size}\")\n",
+        "print(f\"Best learning rate: {best_learning_rate}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model3 = best_model\n",
+        "model3_loss = best_model_loss"
       ]
     },
     {
@@ -348,14 +393,17 @@
         "y_test = fn1(x_test)\n",
         "y_pred1 = model1(x_test)\n",
         "y_pred2 = model2(x_test)\n",
+        "y_pred3 = model3(x_test)\n",
         "### Visualize plots\n",
         "plt.plot(x_test.cpu().detach(), y_test.cpu().detach(), label=\"True function\", color = 'black')\n",
         "plt.plot(x_test.cpu().detach(), y_pred1.cpu().detach(), label=\"Model 1\", color = 'orange', linestyle = 'dashed')\n",
         "plt.plot(x_test.cpu().detach(), y_pred2.cpu().detach(), label=\"Model 2\", color = 'blue', linestyle = 'dashed')\n",
+        "plt.plot(x_test.cpu().detach(), y_pred3.cpu().detach(), label=\"Model 3\", color = 'green', linestyle = 'dashed')\n",
         "plt.legend()\n",
         "plt.show()\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model1_loss), label=\"Model 1 loss\", color = 'orange')\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model2_loss), label=\"Model 2 loss\", color = 'blue')\n",
+        "plt.plot(np.arange(0,len(model1_loss),1),np.array(model3_loss), label=\"Model 3 loss\", color = 'blue')\n",
         "#plt.ylim(10**-6, 1)\n",
         "plt.legend()\n",
         "plt.show()"
@@ -396,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 121,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -409,19 +457,28 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2241\n"
+            "2076\n",
+            "2076\n",
+            "2077\n"
           ]
         }
       ],
       "source": [
         "### Check model size: model1 = 2241 parameters\n",
+        "model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [75,25])\n",
         "model1_parameters = filter(lambda p: p.requires_grad, model1.parameters())\n",
         "params1 = sum([np.prod(p.size()) for p in model1_parameters])\n",
         "print(params1)\n",
-        "### Check model size: model2 = 2241 parameters\n",
+        "### Check model size: model2 = 2240 parameters\n",
+        "model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [17, 26, 25, 23, 12])\n",
         "model2_parameters = filter(lambda p: p.requires_grad, model2.parameters())\n",
         "params2 = sum([np.prod(p.size()) for p in model2_parameters])\n",
-        "print(params2)"
+        "print(params2)\n",
+        "\n",
+        "model3 = model_class(1, 1, [692])\n",
+        "model3_parameters = filter(lambda p: p.requires_grad, model3.parameters())\n",
+        "params3 = sum([np.prod(p.size()) for p in model3_parameters])\n",
+        "print(params3)"
       ]
     }
   ],
