--- a/HW1_problem1_1_simulatefn.ipynb
+++ b/HW1_problem1_1_simulatefn.ipynb
@@ -403,7 +403,7 @@
         "plt.show()\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model1_loss), label=\"Model 1 loss\", color = 'orange')\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model2_loss), label=\"Model 2 loss\", color = 'blue')\n",
-        "plt.plot(np.arange(0,len(model1_loss),1),np.array(model3_loss), label=\"Model 3 loss\", color = 'blue')\n",
+        "plt.plot(np.arange(0,len(model1_loss),1),np.array(model3_loss), label=\"Model 3 loss\", color = 'green')\n",
         "#plt.ylim(10**-6, 1)\n",
         "plt.legend()\n",
         "plt.show()"
