--- a/simulate_fn_1.ipynb
+++ b/simulate_fn_1.ipynb
@@ -17,7 +17,20 @@
       },
       "source": [
         "# HW 1-1 Simulate Function\n",
-        "## Function 1"
+        "## Function 1\n",
+        "\n",
+        "The function we are simulating in this notebook is,\n",
+        "\n",
+        "$$\n",
+        "f(x) = 5\\sin^2(\\frac{x}{2})\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Import Libraries And Check GPU"
       ]
     },
     {
@@ -79,6 +92,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Define Function and Generate Training Data"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -116,7 +136,7 @@
         "id": "qmswK39Ukhkb"
       },
       "source": [
-        "# New Model Class"
+        "## Model Class"
       ]
     },
     {
@@ -151,6 +171,13 @@
         "        for layer in self.layers:\n",
         "            x = layer(x)\n",
         "        return x\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Training Function"
       ]
     },
     {
@@ -190,6 +217,13 @@
         "          epoch_loss += loss.item()\n",
         "      loss_vec.append(epoch_loss)\n",
         "  return loss_vec\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Hyperparameter Tuning and Training"
       ]
     },
     {
@@ -246,21 +280,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# assign model 1\n",
         "model1 = best_model\n",
         "model1_loss = best_model_loss"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "'''# test model function and class\n",
-        "model1 = model_class(input_size = 1, output_size = 1, hidden_sizes = [64,32])\n",
-        "model2 = model_class(input_size = 1, output_size = 1, hidden_sizes = [5, 10, 25, 5])\n",
-        "model1_loss = train_model(model1, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)\n",
-        "model2_loss = train_model(model2, x_train, y_train, batch = 4, epochs = 20, learning_rate = 0.001)'''"
       ]
     },
     {
@@ -304,6 +326,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# assign model 2\n",
         "model2 = best_model\n",
         "model2_loss = best_model_loss"
       ]
@@ -349,8 +372,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# assign model 3\n",
         "model3 = best_model\n",
         "model3_loss = best_model_loss"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model Evaluation and Plotting"
       ]
     },
     {
@@ -404,7 +435,7 @@
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model1_loss), label=\"Model 1 loss\", color = 'orange')\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model2_loss), label=\"Model 2 loss\", color = 'blue')\n",
         "plt.plot(np.arange(0,len(model1_loss),1),np.array(model3_loss), label=\"Model 3 loss\", color = 'green')\n",
-        "#plt.ylim(10**-6, 1)\n",
+        "plt.ylim(10**-5, 10)\n",
         "plt.legend()\n",
         "plt.show()"
       ]
@@ -433,10 +464,17 @@
         }
       ],
       "source": [
-        "# print MSE for models\n",
+        "# print MSE for models on test set\n",
         "print(f\"Model 1 MSE: {nn.functional.mse_loss(y_pred1, y_test)}\")\n",
         "print(f\"Model 2 MSE: {nn.functional.mse_loss(y_pred2, y_test)}\")\n",
         "print(f\"Model 3 MSE: {nn.functional.mse_loss(y_pred3, y_test)}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Check Parameter Sizes"
       ]
     },
     {
