fn2 training data

--- a/simulate_fn_2.ipynb
+++ b/simulate_fn_2.ipynb
@@ -161,11 +161,11 @@
       "outputs": [],
       "source": [
         "### Generate training data\n",
-        "x_train = torch.linspace(-2 * torch.pi, 2 * torch.pi, 2000).unsqueeze(1)\n",
+        "x_train = torch.linspace(-10, 10, 2000).unsqueeze(1)\n",
         "y_train = fn2(x_train)\n",
         "\n",
         "# validation data\n",
-        "x_test = torch.linspace(-2 * torch.pi, 2 * torch.pi, 100).unsqueeze(1)\n",
+        "x_test = torch.linspace(-10, 10, 100).unsqueeze(1)\n",
         "x_test = x_test.to(device)\n",
         "y_test = fn2(x_test)"
       ]
@@ -459,7 +459,7 @@
       ],
       "source": [
         "# Evaluate the model\n",
-        "x_test = torch.linspace(-2 * torch.pi, 2 * torch.pi, 100).unsqueeze(1)\n",
+        "x_test = torch.linspace(-10, 10, 100).unsqueeze(1)\n",
         "x_test = x_test.to(device)\n",
         "y_test = fn2(x_test)\n",
         "y_pred1 = model1(x_test)\n",
