fn2 np to torch

--- a/simulate_fn_2.ipynb
+++ b/simulate_fn_2.ipynb
@@ -149,7 +149,7 @@
         "### Define second function\n",
         "# Define the function to approximate\n",
         "def fn2(x):\n",
-        "    return ((x**3)*np.exp(x/10))/15 "
+        "    return ((x**3)*torch.exp(x/10))/15 "
       ]
     },
     {
