data download comment out

--- a/MNIST_train_CNN_output.ipynb
+++ b/MNIST_train_CNN_output.ipynb
@@ -213,7 +213,7 @@
       ],
       "source": [
         "# MNIST dataset\n",
-        "train_dataset = torchvision.datasets.MNIST(root='./data', train=True, transform=transforms.ToTensor(), download=True)\n",
+        "train_dataset = torchvision.datasets.MNIST(root='./data', train=True, transform=transforms.ToTensor())#, download=True)\n",
         "test_dataset = torchvision.datasets.MNIST(root='./data', train=False, transform=transforms.ToTensor())\n",
         "\n",
         "# Data loaders\n",
