--- a/1.1 Deep vs Shallow/1.1 Train Actual Task/MNIST_train_CNN_output.ipynb
+++ b/1.1 Deep vs Shallow/1.1 Train Actual Task/MNIST_train_CNN_output.ipynb
@@ -38,7 +38,18 @@
       "metadata": {
         "id": "9owBvBlPp5Bq"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: 'dlopen(/Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torchvision/image.so, 0x0006): Symbol not found: __ZN3c106detail19maybe_wrap_dim_slowIxEET_S2_S2_b\n",
+            "  Referenced from: <E03EDA44-89AE-3115-9796-62BA9E0E2EDE> /Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torchvision/image.so\n",
+            "  Expected in:     <F2FE5CF8-5B5B-3FAD-ADF8-C77D90F49FC9> /Users/andrewwright/opt/anaconda3/envs/py311env/lib/python3.11/site-packages/torch/lib/libc10.dylib'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+            "  warn(\n"
+          ]
+        }
+      ],
       "source": [
         "### Import libraries\n",
         "import torch\n",
@@ -74,7 +85,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Device cuda\n"
+            "Device cpu\n"
           ]
         }
       ],
@@ -138,11 +149,18 @@
           ]
         },
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 9912422/9912422 [00:00<00:00, 123452853.38it/s]\n"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "a0156319fdeb4324bad53232abd30e9d",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/9912422 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "name": "stdout",
@@ -155,11 +173,18 @@
           ]
         },
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 28881/28881 [00:00<00:00, 104157948.26it/s]\n"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "9dd9646fbe2842028a7877940653fc5f",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/28881 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "name": "stdout",
@@ -172,11 +197,18 @@
           ]
         },
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 1648877/1648877 [00:00<00:00, 42431124.40it/s]\n"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "c7cc9f3eca07403f803a97c771607482",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/1648877 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "name": "stdout",
@@ -189,11 +221,18 @@
           ]
         },
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 4542/4542 [00:00<00:00, 5150183.50it/s]"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "4011731339ae47cd9182a3c8ab3734f9",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/4542 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
           "name": "stdout",
@@ -202,18 +241,11 @@
             "Extracting ./data/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./data/MNIST/raw\n",
             "\n"
           ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
         }
       ],
       "source": [
         "# MNIST dataset\n",
-        "train_dataset = torchvision.datasets.MNIST(root='./data', train=True, transform=transforms.ToTensor())#, download=True)\n",
+        "train_dataset = torchvision.datasets.MNIST(root='./data', train=True, transform=transforms.ToTensor(), download=True)\n",
         "test_dataset = torchvision.datasets.MNIST(root='./data', train=False, transform=transforms.ToTensor())\n",
         "\n",
         "# Data loaders\n",
